--- a/Week 1-2 Assignment.ipynb
+++ b/Week 1-2 Assignment.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,8 @@
     "import pandas as pd\n",
     "import random \n",
     "import matplotlib.pyplot as plt\n",
-    "import openpyxl"
+    "import openpyxl\n",
+    "import math"
    ]
   },
   {
@@ -32,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +42,7 @@
        "[1, 3, 8, 6, 4, 5, 10, 9, 20]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -54,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +91,7 @@
        "[1, 3, 4, 5, 6, 8, 9, 10, 20]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -103,16 +104,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[7, 17, 25, 17, 19, 27, 20, 17, 27, 23]"
+       "[0, 6, 24, 11, 23, 19, 27, 0, 1, 16]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -134,7 +135,7 @@
     {
      "data": {
       "text/plain": [
-       "[1, 3, 4, 5, 6, 7, 8, 9, 10, 17, 17, 17, 19, 20, 20, 23, 25, 27, 27]"
+       "[0, 0, 1, 1, 3, 4, 5, 6, 6, 8, 9, 10, 11, 16, 19, 20, 23, 24, 27]"
       ]
      },
      "execution_count": 17,
@@ -158,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +226,7 @@
        "4  1964  3253112403"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -269,11 +270,294 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "1. first I will create a list of random numbers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[28,\n",
+       " 19,\n",
+       " 141,\n",
+       " 123,\n",
+       " 7,\n",
+       " 85,\n",
+       " 82,\n",
+       " 29,\n",
+       " 56,\n",
+       " 52,\n",
+       " 26,\n",
+       " 100,\n",
+       " 78,\n",
+       " 78,\n",
+       " 107,\n",
+       " 0,\n",
+       " 120,\n",
+       " 85,\n",
+       " 144,\n",
+       " 19,\n",
+       " 92,\n",
+       " 70,\n",
+       " 75,\n",
+       " 32,\n",
+       " 83,\n",
+       " 67,\n",
+       " 136,\n",
+       " 87,\n",
+       " 45,\n",
+       " 112,\n",
+       " 9,\n",
+       " 2,\n",
+       " 135,\n",
+       " 119,\n",
+       " 95,\n",
+       " 150,\n",
+       " 44,\n",
+       " 128,\n",
+       " 107,\n",
+       " 107,\n",
+       " 48,\n",
+       " 60,\n",
+       " 1,\n",
+       " 36,\n",
+       " 19,\n",
+       " 104,\n",
+       " 83,\n",
+       " 112,\n",
+       " 25,\n",
+       " 141,\n",
+       " 37,\n",
+       " 133,\n",
+       " 127,\n",
+       " 43,\n",
+       " 4,\n",
+       " 29,\n",
+       " 120,\n",
+       " 111,\n",
+       " 38,\n",
+       " 134,\n",
+       " 92,\n",
+       " 130,\n",
+       " 69,\n",
+       " 45,\n",
+       " 106,\n",
+       " 14,\n",
+       " 40,\n",
+       " 108,\n",
+       " 72,\n",
+       " 144,\n",
+       " 99,\n",
+       " 83,\n",
+       " 84,\n",
+       " 123,\n",
+       " 12,\n",
+       " 114,\n",
+       " 3,\n",
+       " 14,\n",
+       " 126,\n",
+       " 23,\n",
+       " 91,\n",
+       " 41,\n",
+       " 23,\n",
+       " 150,\n",
+       " 82,\n",
+       " 9,\n",
+       " 92,\n",
+       " 109,\n",
+       " 100,\n",
+       " 139,\n",
+       " 49,\n",
+       " 140,\n",
+       " 33,\n",
+       " 40,\n",
+       " 112,\n",
+       " 145,\n",
+       " 16,\n",
+       " 94,\n",
+       " 140,\n",
+       " 75]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# This code will create a list of random numbers\n",
+    "list = []\n",
+    "for i in range(100):\n",
+    "    x = random.randint(0,150)\n",
+    "    list.append(x)\n",
+    "    \n",
+    "list\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2. Next I will create a new list from my random list that includes numbers that are divisible by 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[141,\n",
+       " 123,\n",
+       " 78,\n",
+       " 78,\n",
+       " 0,\n",
+       " 120,\n",
+       " 144,\n",
+       " 75,\n",
+       " 87,\n",
+       " 45,\n",
+       " 9,\n",
+       " 135,\n",
+       " 150,\n",
+       " 48,\n",
+       " 60,\n",
+       " 36,\n",
+       " 141,\n",
+       " 120,\n",
+       " 111,\n",
+       " 69,\n",
+       " 45,\n",
+       " 108,\n",
+       " 72,\n",
+       " 144,\n",
+       " 99,\n",
+       " 84,\n",
+       " 123,\n",
+       " 12,\n",
+       " 114,\n",
+       " 3,\n",
+       " 126,\n",
+       " 150,\n",
+       " 9,\n",
+       " 33,\n",
+       " 75]"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list_by_3 = [x for x in list if x % 3==0]\n",
+    "list_by_3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "3. With the two lists I will calculate the length of the two lists in the list_diff variable"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "65"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len_of_list = len(list)\n",
+    "len_of_list_by_3 = len(list_by_3)\n",
+    "list_diff= len_of_list - len_of_list_by_3\n",
+    "list_diff"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "4. In this code I will run 10 experiments \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[102, 111, 96, 110, 95, 91, 103, 99, 93, 96]"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "experiments = 10\n",
+    "list_3 = []\n",
+    "for i in range(0,experiments):\n",
+    "    list_1 = [random.randint(0,100) for x in range(1,150)]\n",
+    "    list_2 = [x for x in list_1 if x % 3==0]\n",
+    "    len_list_1 =len(list_1)\n",
+    "    len_of_list_2 = len(list_2)\n",
+    "    diff_of_lists = len_list_1-len_of_list_2\n",
+    "    list_3.append(diff_of_lists)\n",
+    "    \n",
+    "list_3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "5. Calculate the average of the experiments"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "99.6"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ave_of_exp = sum(list_3)/ float(len(list_3))\n",
+    "ave_of_exp"
+   ]
   },
   {
    "cell_type": "markdown",
