Week 1/2 assignment final update

--- a/Week 1-2 Assignment.ipynb
+++ b/Week 1-2 Assignment.ipynb
@@ -1152,7 +1152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1161,7 +1161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1196,7 +1196,7 @@
     }
    ],
    "source": [
-    "# This code opens the file in read mode and displays the first 10 lines\n",
+    "# This code imports the CSV file and converts the data line by line in to a dictionary.\n",
     "with open(r\"C:\\Users\\mchlp\\OneDrive\\Documents\\Data Preperation\\The-Data-Wrangling-Workshop\\Chapter02\\datasets\\sales_record.csv\") as fd:\n",
     "    first_line = fd.readline()\n",
     "    header = first_line.replace(\"\\n\", \"\").split(\",\")\n",
@@ -1208,6 +1208,13 @@
     "        if i > 10:\n",
     "            break"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
