--- a/Week 1-2 Assignment.ipynb
+++ b/Week 1-2 Assignment.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +42,7 @@
        "[1, 3, 8, 6, 4, 5, 10, 9, 20]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +91,7 @@
        "[1, 3, 4, 5, 6, 8, 9, 10, 20]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -104,16 +104,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[0, 6, 24, 11, 23, 19, 27, 0, 1, 16]"
+       "[27, 27, 21, 1, 8, 29, 7, 25, 22, 1]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -129,16 +129,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[0, 0, 1, 1, 3, 4, 5, 6, 6, 8, 9, 10, 11, 16, 19, 20, 23, 24, 27]"
+       "[1, 1, 1, 3, 4, 5, 6, 7, 8, 8, 9, 10, 20, 21, 22, 25, 27, 27, 29]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +226,7 @@
        "4  1964  3253112403"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -278,115 +278,115 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[28,\n",
-       " 19,\n",
-       " 141,\n",
-       " 123,\n",
-       " 7,\n",
-       " 85,\n",
-       " 82,\n",
-       " 29,\n",
-       " 56,\n",
-       " 52,\n",
-       " 26,\n",
-       " 100,\n",
-       " 78,\n",
-       " 78,\n",
-       " 107,\n",
-       " 0,\n",
-       " 120,\n",
-       " 85,\n",
-       " 144,\n",
-       " 19,\n",
-       " 92,\n",
-       " 70,\n",
-       " 75,\n",
-       " 32,\n",
-       " 83,\n",
-       " 67,\n",
-       " 136,\n",
-       " 87,\n",
-       " 45,\n",
-       " 112,\n",
-       " 9,\n",
-       " 2,\n",
-       " 135,\n",
-       " 119,\n",
-       " 95,\n",
-       " 150,\n",
-       " 44,\n",
-       " 128,\n",
-       " 107,\n",
-       " 107,\n",
-       " 48,\n",
-       " 60,\n",
-       " 1,\n",
-       " 36,\n",
-       " 19,\n",
-       " 104,\n",
-       " 83,\n",
-       " 112,\n",
-       " 25,\n",
-       " 141,\n",
-       " 37,\n",
-       " 133,\n",
-       " 127,\n",
-       " 43,\n",
-       " 4,\n",
-       " 29,\n",
-       " 120,\n",
-       " 111,\n",
-       " 38,\n",
-       " 134,\n",
-       " 92,\n",
-       " 130,\n",
-       " 69,\n",
-       " 45,\n",
-       " 106,\n",
-       " 14,\n",
-       " 40,\n",
-       " 108,\n",
-       " 72,\n",
-       " 144,\n",
-       " 99,\n",
-       " 83,\n",
+       "[114,\n",
+       " 53,\n",
+       " 46,\n",
+       " 64,\n",
+       " 31,\n",
+       " 30,\n",
        " 84,\n",
-       " 123,\n",
-       " 12,\n",
+       " 53,\n",
+       " 138,\n",
+       " 17,\n",
+       " 63,\n",
+       " 118,\n",
+       " 136,\n",
+       " 105,\n",
+       " 2,\n",
+       " 148,\n",
        " 114,\n",
-       " 3,\n",
-       " 14,\n",
-       " 126,\n",
-       " 23,\n",
-       " 91,\n",
-       " 41,\n",
-       " 23,\n",
-       " 150,\n",
-       " 82,\n",
-       " 9,\n",
-       " 92,\n",
-       " 109,\n",
-       " 100,\n",
+       " 95,\n",
+       " 52,\n",
+       " 24,\n",
+       " 104,\n",
+       " 107,\n",
+       " 5,\n",
        " 139,\n",
-       " 49,\n",
-       " 140,\n",
+       " 88,\n",
+       " 136,\n",
+       " 136,\n",
+       " 21,\n",
+       " 2,\n",
        " 33,\n",
-       " 40,\n",
+       " 78,\n",
+       " 10,\n",
+       " 43,\n",
+       " 124,\n",
+       " 101,\n",
+       " 4,\n",
+       " 138,\n",
+       " 77,\n",
+       " 19,\n",
+       " 110,\n",
+       " 76,\n",
+       " 18,\n",
+       " 5,\n",
+       " 6,\n",
+       " 95,\n",
+       " 97,\n",
+       " 107,\n",
+       " 95,\n",
+       " 42,\n",
+       " 79,\n",
+       " 18,\n",
+       " 124,\n",
+       " 53,\n",
+       " 0,\n",
+       " 105,\n",
+       " 61,\n",
+       " 110,\n",
+       " 37,\n",
+       " 53,\n",
+       " 139,\n",
+       " 88,\n",
+       " 57,\n",
+       " 58,\n",
+       " 109,\n",
+       " 56,\n",
+       " 28,\n",
+       " 76,\n",
+       " 77,\n",
+       " 88,\n",
+       " 54,\n",
+       " 97,\n",
+       " 128,\n",
+       " 106,\n",
+       " 70,\n",
+       " 142,\n",
+       " 96,\n",
+       " 125,\n",
+       " 69,\n",
+       " 149,\n",
+       " 115,\n",
+       " 132,\n",
+       " 101,\n",
+       " 114,\n",
+       " 144,\n",
+       " 15,\n",
+       " 30,\n",
+       " 78,\n",
+       " 54,\n",
+       " 59,\n",
+       " 149,\n",
+       " 65,\n",
+       " 53,\n",
+       " 78,\n",
+       " 64,\n",
+       " 131,\n",
+       " 45,\n",
+       " 54,\n",
+       " 80,\n",
        " 112,\n",
-       " 145,\n",
-       " 16,\n",
-       " 94,\n",
-       " 140,\n",
-       " 75]"
+       " 131]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -411,50 +411,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[141,\n",
-       " 123,\n",
-       " 78,\n",
-       " 78,\n",
-       " 0,\n",
-       " 120,\n",
-       " 144,\n",
-       " 75,\n",
-       " 87,\n",
-       " 45,\n",
-       " 9,\n",
-       " 135,\n",
-       " 150,\n",
-       " 48,\n",
-       " 60,\n",
-       " 36,\n",
-       " 141,\n",
-       " 120,\n",
-       " 111,\n",
-       " 69,\n",
-       " 45,\n",
-       " 108,\n",
-       " 72,\n",
-       " 144,\n",
-       " 99,\n",
+       "[114,\n",
+       " 30,\n",
        " 84,\n",
-       " 123,\n",
-       " 12,\n",
+       " 138,\n",
+       " 63,\n",
+       " 105,\n",
        " 114,\n",
-       " 3,\n",
-       " 126,\n",
-       " 150,\n",
-       " 9,\n",
+       " 24,\n",
+       " 21,\n",
        " 33,\n",
-       " 75]"
+       " 78,\n",
+       " 138,\n",
+       " 18,\n",
+       " 6,\n",
+       " 42,\n",
+       " 18,\n",
+       " 0,\n",
+       " 105,\n",
+       " 57,\n",
+       " 54,\n",
+       " 96,\n",
+       " 69,\n",
+       " 132,\n",
+       " 114,\n",
+       " 144,\n",
+       " 15,\n",
+       " 30,\n",
+       " 78,\n",
+       " 54,\n",
+       " 78,\n",
+       " 45,\n",
+       " 54]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -473,16 +470,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "65"
+       "68"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -503,16 +500,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[102, 111, 96, 110, 95, 91, 103, 99, 93, 96]"
+       "[89, 101, 107, 92, 105, 103, 96, 103, 103, 99]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -540,16 +537,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "99.6"
+       "99.8"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -575,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -619,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -628,7 +625,7 @@
        "str"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -640,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -649,7 +646,7 @@
        "1242"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -661,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -670,7 +667,7 @@
        "'IT is a truth universally acknowledged, that a single man in possession ofa good fortune must be in want of a wife.However little known the feelings or views of such a man may be on his first entering a neighbourhood, this truth is so well fixed in the minds of the surrounding families, that he is considered as the rightful property of some one or other of their daughters.“My dear Mr. Bennet,” said his lady to him one day, “have you heard that Netherfield Park is let at last?” Mr. Bennet replied that he had not.“But it is,” returned she; “for Mrs. Long has just been here, and she told me all about it.”Mr. Bennet made no answer.“Do not you want to know who has taken it?” cried his wife, impatiently.“You want to tell me, and I have no objection to hearing it.”This was invitation enough.“Why, my dear, you must know, Mrs. Long says that Netherfield is taken by a young man of large fortune from the north of England; that he came down on Monday in a chaise and four to see the place, and was so much delighted with it that he agreed with Mr. Morris immediately; that he is to take possession before Michaelmas, and some of his servants are to be in the house by the end of next week.”“What is his name?'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -683,7 +680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -701,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -710,7 +707,7 @@
        "'IT is a truth universally acknowledged  that a single man in possession ofa good fortune must be in want of a wife However little known the feelings or views of such a man may be on his first entering a neighbourhood  this truth is so well fixed in the minds of the surrounding families  that he is considered as the rightful property of some one or other of their daughters  My dear Mr  Bennet   said his lady to him one day   have you heard that Netherfield Park is let at last   Mr  Bennet replied that he had not  But it is   returned she   for Mrs  Long has just been here  and she told me all about it  Mr  Bennet made no answer  Do not you want to know who has taken it   cried his wife  impatiently  You want to tell me  and I have no objection to hearing it  This was invitation enough  Why  my dear  you must know  Mrs  Long says that Netherfield is taken by a young man of large fortune from the north of England  that he came down on Monday in a chaise and four to see the place  and was so much delighted with it that he agreed with Mr  Morris immediately  that he is to take possession before Michaelmas  and some of his servants are to be in the house by the end of next week   What is his name '"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -722,7 +719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -966,7 +963,7 @@
        " 'name']"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -986,7 +983,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -996,7 +993,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -1020,7 +1017,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -1044,16 +1041,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<itertools.permutations at 0x1e8329e89a0>"
+       "<itertools.permutations at 0x1f825aaee30>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1064,7 +1061,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1082,14 +1079,14 @@
    ],
    "source": [
     "# This code creates a loop to produce all possible iterations of the permutation\n",
-    "for num_tup in permutations(range(3)):\n",
-    "    print(num_tup)\n",
-    "    assert isinstance(num_tup, tuple)"
+    "for number_tup in permutations(range(3)):\n",
+    "    print(number_tup)\n",
+    "    assert isinstance(number_tup, tuple)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1107,24 +1104,24 @@
    ],
    "source": [
     "# This code uses the dropwhile function to remove leading zeros\n",
-    "for num_tup in permutations(range(3)):\n",
-    "    print(list(dropwhile(lambda x: x <= 0, num_tup)))"
+    "for number_tup in permutations(range(3)):\n",
+    "    print(list(dropwhile(lambda x: x<=0, number_tup)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "12.0\n",
-      "21.0\n",
-      "102.0\n",
-      "120.0\n",
-      "201.0\n",
+      "210.0\n",
+      "210.0\n",
+      "210.0\n",
+      "210.0\n",
+      "210.0\n",
       "210.0\n"
      ]
     }
@@ -1138,7 +1135,7 @@
     "    return final_num\n",
     "\n",
     "for num_tup in permutations(range(3)):\n",
-    "    number_stack = list(dropwhile(lambda x: x <= 0, num_tup))\n",
+    "    number_stack = list(dropwhile(lambda x: x <= 0, number_tup))\n",
     "    print(convert_to_num(number_stack))\n",
     "    "
    ]
@@ -1152,7 +1149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1161,7 +1158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1173,7 +1170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
