--- a/Week 5-6 Assignment.ipynb
+++ b/Week 5-6 Assignment.ipynb
@@ -18608,21 +18608,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 71,
    "id": "09242d73",
    "metadata": {},
    "outputs": [],
    "source": [
-    "conn = sqlite3.connect(\"emp.db\")"
+    "# This code creates the database\n",
+    "conn = sqlite3.connect(\"cust.db\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "id": "70c05946",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# This code creates the cursor to manage the database\n",
     "c = conn.cursor()"
    ]
   },
@@ -18633,6 +18635,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# This code creates the table for the database\n",
     "c.execute(\"\"\"CREATE TABLE customer(\n",
     "    First TEXT,\n",
     "    Last, \n",
@@ -18662,6 +18665,7 @@
     }
    ],
    "source": [
+    "# This series of codes adds the customer data to the table\n",
     "c.execute('INSERT INTO customer VALUES(\"Michael\", \"Perrine\", \"1023 Cerro Alto Dr\", \"San Antonio\",  \"TX\",  78213, \"210-343-9973\")')\n",
     "c.execute('INSERT INTO customer VALUES(\"Jon\", \"Smith\", \"23 Main Dr\", \"San Antonio\", \"TX\",  78213,  \"210-885-9966\")')\n",
     "c.execute('INSERT INTO customer VALUES(\"Mitchel\", \"Palmer\", \"11529 Blake Ave\", \"Kansas City\", \"Mo\", 64802, \"816-213-1111\")')\n",
@@ -18676,7 +18680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "id": "bed30f4a",
    "metadata": {},
    "outputs": [
@@ -18692,12 +18696,13 @@
     }
    ],
    "source": [
+    "# This code selects a customer\n",
     "c.execute(\"SELECT * FROM customer WHERE last = 'Johnson'\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "id": "70aff4e7",
    "metadata": {},
    "outputs": [
@@ -18713,12 +18718,13 @@
     }
    ],
    "source": [
+    "# This code displays the query\n",
     "c.fetchone()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": null,
    "id": "d2819a45",
    "metadata": {},
    "outputs": [
@@ -18734,12 +18740,13 @@
     }
    ],
    "source": [
+    "# This code selects a customer\n",
     "c.execute(\"SELECT * FROM customer WHERE first ='Michael'\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "id": "bdc59909",
    "metadata": {},
    "outputs": [
@@ -18761,12 +18768,13 @@
     }
    ],
    "source": [
+    "# This code displays the query\n",
     "c.fetchone()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": null,
    "id": "7adcc8d0",
    "metadata": {},
    "outputs": [
@@ -18782,12 +18790,13 @@
     }
    ],
    "source": [
+    "# This code selects a customer\n",
     "c.execute(\"SELECT * FROM customer WHERE city ='Kansas City'\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": null,
    "id": "52d3fa85",
    "metadata": {},
    "outputs": [
@@ -18809,7 +18818,18 @@
     }
    ],
    "source": [
+    "# This code displays the query\n",
     "c.fetchone()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "dc81589b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conn.close()"
    ]
   }
  ],
